gap property was removed to prevent separation between elements

--- a/src/components/SectionImageText/styles.scss
+++ b/src/components/SectionImageText/styles.scss
@@ -3,7 +3,6 @@
 .section-image-text-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 3rem;
   width: 100%;
 
   &.left {
